Using scaffolding for generated CRUD

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+  "DefaultConnectionString": "Cadena de conexxión a servidores"
+}
 }
